# Synapse

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  install.sh  newbro  pyproject.toml  synapse  synapse.py
.github/workflows/: claude-code-review.yml  deploy-ui-vercel.yml  publish-pypi.yml
app/: __init__.py  main.py
app/api/: __init__.py  commands.py  messages.py  models.py  sessions.py
app/communication_brain/: __init__.py  dialog_manager.py  interpreter.py  response_generator.py
app/execution_brain/: event_normalizer.py  executor_router.py  orchestrator.py  task_graph.py
app/executors/: __init__.py  base.py  mock.py  registry.py
app/infrastructure/: config.py
app/llm/: client.py  fallback.py  interpreter.py  responder.py
app/message_router/: __init__.py  priorities.py  resolver.py  router.py
app/protocols/: __init__.py  conversation.py  execution.py  runtime.py  stream.py  tasks.py
app/shared_blackboard/: models.py  mutations.py  store.py
config/: connector.example.yaml  gateway.example.yaml  gateway.yaml
docs/: README.md  design.md  memories.md
docs/architecture/: blackboard.md  communication-brain.md  execution-brain.md  executors.md  index.md  notifications-and-interruptions.md  observability.md  overview.md  repository-structure.md  sessions-and-runs.md
docs/decisions/: 0001-blackboard-centered-runtime.md  0002-no-message-interpreter.md  0003-sessionized-execution.md  0004-proactive-notifications-and-interruptions.md  index.md
docs/guides/: add-blackboard-backend.md  add-executor-adapter.md  agora-conversational-ai.md  cli.md  cloudflare-pages-deployment.md  connector-host.md  frontend-contracts.md  frontend-handoff.md  frontend-workbench.md  gateway-host.md  index.md  local-dev.md  ubuntu-systemd.md  vercel-ui-deployment.md
docs/protocol/: draft-to-execute.md  execution-mode.md  execution-session-and-run.md  index.md  interaction-request-and-attention.md  interruption.md  mutation-and-command.md  session-stream.md  summary-notification.md  task-execution-detail.md  task.md
docs/rfcs/: 0001-design-v2.md  00010-interaction-harness-and-mode-profiles.md  00011-detached-executor-host-and-executor-only-cli.md  0002-execution-sessions-and-runs.md  0003-communication-prompt-modularization.md  0004-acpx-execution-runtime-integration.md  0004-headless-connector-host-and-cli-setup.md  0005-acpx-execution-runtime-integration.md  0006-user-defined-persona-system.md  0007-persona-workspace-and-session-continuity.md  0008-execution-detail-context-and-system-prompt-audit.md  0008-interaction-harness-and-mode-profiles.md  0009-interaction-requests-and-attention-items.md  0012-newbro-v0-draft-to-execute.md  index.md
evals/: README.md  run.py
example-ui/: index.html  vite.config.ts
examples/: README.md
fixtures/: README.md
frontend/: index.html  package.json  vite.config.ts
replays/: README.md
runtime/: main.py
scripts/: README.md  publish_pypi.sh
tests/: conftest.py
(+708 files in other folders)
