[project]
name = "synopse"
version = "0.1.0"
description = "Communication brain / execution brain runtime prototype"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "openai>=1.51,<2.0",
  "pydantic>=2.8,<3.0",
  "python-dotenv>=1.0,<2.0",
  "uvicorn>=0.30,<1.0",
  "websockets>=13,<16",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["runtime*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
