[project]
name = "newbro-cli"
version = "0.1.0"
description = "Communication brain / execution brain runtime prototype"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "agora-agent-server-sdk>=1.1.1",
  "agora-token-builder>=1.0.0",
  "anyio>=4.4,<5",
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "openai>=1.51,<2.0",
  "pydantic>=2.8,<3.0",
  "PyYAML>=6.0,<7.0",
  "python-dotenv>=1.0,<2.0",
  "typing-extensions>=4.12,<5",
  "uvicorn>=0.30,<1.0",
  "websockets>=13,<16",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-cov>=5,<6",
  "pyright>=1.1.380,<2",
  "ruff>=0.6,<1",
]
release = [
  "build>=1.2,<2.0",
  "twine>=5,<7",
]

[project.scripts]
newbro = "synapse.cli.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["synapse*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
